// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `<DocumentFragment />`;

exports[`Render 1 1 2`] = `
<DocumentFragment>
  <div
    class="menu"
  >
    <div
      aria-expanded="true"
      class="ui active visible item dropdown"
      name="save-status"
      role="listbox"
      tabindex="0"
    >
      <i
        class="icons em__icon-group-margin"
      >
        <i
          aria-hidden="true"
          class="pencil alternate icon"
        />
        <i
          aria-hidden="true"
          class="pink check top right corner icon"
        />
      </i>
      Draft (Visible only to author)
      <i
        aria-hidden="true"
        class="dropdown icon"
      />
      <div
        class="visible menu transition"
      >
        <div
          aria-checked="true"
          aria-selected="true"
          class="active selected item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Draft (Visible only to author)
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Public (Visible to everyone)
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Private (Visible only to logged in users)
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 3`] = `
<DocumentFragment>
  <div
    class="menu"
  >
    <div
      aria-expanded="false"
      class="ui item dropdown"
      name="save-status"
      role="listbox"
      tabindex="0"
    >
      <i
        class="icons em__icon-group-margin"
      >
        <i
          aria-hidden="true"
          class="pencil alternate icon"
        />
        <i
          aria-hidden="true"
          class="pink check top right corner icon"
        />
      </i>
      Draft (Visible only to author)
      <i
        aria-hidden="true"
        class="dropdown icon"
      />
      <div
        class="menu transition"
      >
        <div
          aria-checked="true"
          aria-selected="false"
          class="active item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Draft (Visible only to author)
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="false"
          class="item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Public (Visible to everyone)
          </span>
        </div>
        <div
          aria-checked="false"
          aria-selected="true"
          class="selected item"
          role="option"
          style="pointer-events: all;"
        >
          <span
            class="text"
          >
            Private (Visible only to logged in users)
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
